@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam monochrome true

package engine {
    class renderable_entity {
    }
}

package entities {
    class player {
    }
}

package math {
    class vec2 {
    }
}

package geometry {
    class map_data {
    }
    class subsector {
    }
}

package combat {
    package weapons {
        class weapon {
        }
    }
}

package world_object {

    abstract class pickup {
        - pickup_radius : float
        - player_ref : entities::player&
        - map_ref : geometry::map_data&
        - subsector_id : util::indexed_storage<geometry::subsector>::id_t
        - consumed : bool
        + pickup(pos : math::vec2, z : float, tex : assets::texture_id, p : entities::player&, md : geometry::map_data&, sub_id : id_t, radius : float = 20.0f, scale : float = 1.0f)
        + update(dt : float) : void override
        + is_consumed() : bool const
        + {abstract} on_pickup(p : entities::player&) : void
        + virtual ~pickup()
    }

    class weapon_pickup {
        - provided_weapon : std::unique_ptr<combat::weapons::weapon>
        - slot : int
        + weapon_pickup(pos : math::vec2, z : float, tex : assets::texture_id, w : std::unique_ptr<combat::weapons::weapon>, weapon_slot : int, p : entities::player&, md : geometry::map_data&, sub_id : id_t, radius : float = 25.0f, scale : float = 0.4f)
        + on_pickup(p : entities::player&) : void override
    }

    class armor_pickup {
        - armor_amount : float
        + armor_pickup(pos : math::vec2, z : float, tex : assets::texture_id, amount : float, p : entities::player&, md : geometry::map_data&, sub_id : id_t, radius : float = 20.0f)
        + on_pickup(p : entities::player&) : void override
    }

    class health_pickup {
        - heal_amount : float
        + health_pickup(pos : math::vec2, z : float, tex : assets::texture_id, amount : float, p : entities::player&, md : geometry::map_data&, sub_id : id_t, radius : float = 20.0f)
        + on_pickup(p : entities::player&) : void override
    }

    class "ammo_pickup<WeaponT>" as ammo_pickup {
        - amount : int
        + ammo_pickup(pos : math::vec2, z : float, tex : assets::texture_id, amt : int, p : entities::player&, md : geometry::map_data&, sub_id : id_t, radius : float = 20.0f)
        + on_pickup(p : entities::player&) : void override
    }
}

'' Inheritance
engine::renderable_entity <|-- world_object::pickup
world_object::pickup <|-- world_object::weapon_pickup
world_object::pickup <|-- world_object::armor_pickup
world_object::pickup <|-- world_object::health_pickup
world_object::pickup <|-- world_object::ammo_pickup

'' Dependencies
world_object::pickup ..> entities::player
world_object::pickup ..> geometry::map_data
world_object::weapon_pickup ..> combat::weapons::weapon

@enduml
